# scep256k1-test

./: .gitignore  main-17.2.rs  outputs.txt
verify-js/: package.json  verify.js
verify-rs/: Cargo.toml
verify-rs/src/: main.rs
